fixes #6598. resizes job output window to not overflow in x direction. reviewed by mthornton.
git-svn-id: http://dev.zenoss.com/svnint/trunk/core@32783 f5df01ce-0320-0410-9ed9-ddcd13c732cc

--- a/Products/ZenUI3/browser/resources/css/zenoss.css
+++ b/Products/ZenUI3/browser/resources/css/zenoss.css
@@ -753,3 +753,12 @@ span.status-down {
     text-decoration: underline;
 }
 
+.joblog-stream-c {
+    width: 99%; 
+    background-color: white;
+    border: 2px solid black;
+    height:400px;
+    margin: 1em auto;
+}
+
+           
